<?xml version="1.0" encoding="utf-8"?>
<RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:background="@android:color/black"
    tools:context="com.example.omninos.Activities.LoginActivity">

    <include
        android:id="@+id/toolbar"
        layout="@layout/top_layout" />

    <androidx.core.widget.NestedScrollView
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:layout_below="@id/toolbar">

        <RelativeLayout
            android:layout_width="match_parent"
            android:layout_height="match_parent"
            android:layout_below="@+id/toolbar">

            <RelativeLayout
                android:id="@+id/relative1"
                android:layout_width="match_parent"
                android:layout_height="wrap_content">

                <include layout="@layout/logo" />

            </RelativeLayout>

            <RelativeLayout
                android:id="@+id/relativeLayout3"
                android:layout_width="match_parent"
                android:layout_height="match_parent"
                android:layout_below="@id/relative1">

                <RelativeLayout
                    android:id="@+id/relativeLayout2"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content">


                    <androidx.cardview.widget.CardView
                        android:id="@+id/cardview1"
                        android:layout_width="match_parent"
                        android:layout_height="wrap_content"
                        android:layout_centerHorizontal="true"
                        android:layout_marginLeft="@dimen/card_view_margin_left"
                        android:layout_marginRight="@dimen/card_view_margin_right"
                        android:elevation="5dp"
                        app:cardCornerRadius="@dimen/cardCornerRadius"
                        app:cardPreventCornerOverlap="false"
                        app:cardUseCompatPadding="true">

                        <RelativeLayout
                            android:layout_width="match_parent"
                            android:layout_height="wrap_content">

                            <LinearLayout
                                android:id="@+id/linearLayout1"
                                android:layout_width="match_parent"
                                android:layout_height="wrap_content"
                                android:orientation="vertical"
                                android:padding="@dimen/padding_inside_card_view">


                                <TextView
                                    android:layout_width="wrap_content"
                                    android:layout_height="wrap_content"
                                    android:padding="@dimen/padding_title_text"
                                    android:text="@string/username_or_email"
                                    android:textColor="@android:color/black"
                                    android:textSize="18sp"
                                    android:textStyle="bold" />

                                <androidx.cardview.widget.CardView
                                    android:layout_width="match_parent"
                                    android:layout_height="wrap_content"
                                    android:layout_margin="@dimen/dp_3"
                                    app:cardCornerRadius="@dimen/dp_2">

                                    <LinearLayout
                                        android:layout_width="match_parent"
                                        android:layout_height="match_parent"
                                        android:gravity="center_vertical"
                                        android:orientation="horizontal"
                                        android:padding="@dimen/layout_padding">

                                        <ImageView
                                            android:id="@+id/email_icon"
                                            android:layout_width="@dimen/dp_30"
                                            android:layout_height="@dimen/dp_30"
                                            android:src="@drawable/message" />

                                        <EditText
                                            android:id="@+id/email_address"
                                            android:layout_width="match_parent"
                                            android:layout_height="wrap_content"
                                            android:layout_marginLeft="@dimen/dp_10"
                                            android:layout_weight="1"
                                            android:background="@android:color/white"
                                            android:hint="@string/username_or_email_hint"
                                            android:padding="@dimen/layout_padding"
                                            android:singleLine="true" />

                                    </LinearLayout>

                                </androidx.cardview.widget.CardView>

                                <TextView
                                    android:layout_width="wrap_content"
                                    android:layout_height="wrap_content"
                                    android:padding="@dimen/padding_title_text"
                                    android:text="@string/password"
                                    android:textColor="@android:color/black"
                                    android:textSize="18sp"
                                    android:textStyle="bold" />

                                <androidx.cardview.widget.CardView
                                    android:layout_width="match_parent"
                                    android:layout_height="wrap_content"
                                    android:layout_margin="@dimen/dp_3"
                                    app:cardCornerRadius="@dimen/dp_2">


                                    <LinearLayout
                                        android:layout_width="match_parent"
                                        android:layout_height="wrap_content"
                                        android:gravity="center_vertical"
                                        android:orientation="horizontal"
                                        android:padding="@dimen/layout_padding">

                                        <ImageView
                                            android:id="@+id/lock_icon"
                                            android:layout_width="@dimen/dp_30"
                                            android:layout_height="@dimen/dp_30"
                                            android:layout_marginBottom="@dimen/dp_2"
                                            android:src="@drawable/lock" />

                                        <EditText
                                            android:id="@+id/user_Password"
                                            android:layout_width="match_parent"
                                            android:layout_height="wrap_content"
                                            android:layout_marginLeft="@dimen/dp_10"
                                            android:background="@android:color/white"
                                            android:hint="@string/password_hint"
                                            android:inputType="numberPassword"
                                            android:padding="@dimen/layout_padding"
                                            android:singleLine="true" />

                                    </LinearLayout>

                                </androidx.cardview.widget.CardView>

                                <TextView
                                    android:id="@+id/forget_password_link"
                                    android:layout_width="match_parent"
                                    android:layout_height="wrap_content"
                                    android:layout_centerHorizontal="true"
                                    android:layout_marginTop="15dp"
                                    android:gravity="end"
                                    android:text="@string/forget_password"
                                    android:textStyle="bold" />

                                <Button
                                    android:id="@+id/login_btn"
                                    android:layout_width="match_parent"
                                    android:layout_height="wrap_content"
                                    android:layout_margin="@dimen/dp_30"
                                    android:layout_marginBottom="@dimen/dp_10"
                                    android:background="@drawable/gradient_button1"
                                    android:text="@string/login_button"
                                    android:textColor="@android:color/white"
                                    android:textStyle="bold" />

                            </LinearLayout>


                        </RelativeLayout>

                    </androidx.cardview.widget.CardView>

                </RelativeLayout>

                <LinearLayout
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:layout_below="@id/relativeLayout2"
                    android:layout_margin="@dimen/dp_20"
                    android:gravity="center"
                    android:orientation="vertical">

                    <TextView
                        android:layout_width="wrap_content"
                        android:layout_height="wrap_content"
                        android:text="@string/or_login_with"
                        android:textColor="@android:color/white" />

                    <LinearLayout
                        android:layout_width="wrap_content"
                        android:layout_height="wrap_content"
                        android:layout_marginTop="@dimen/dp_20">

                        <ImageView
                            android:layout_width="70dp"
                            android:layout_height="70dp"
                            android:layout_marginRight="@dimen/dp_10"
                            android:src="@drawable/fb" />

                        <ImageView
                            android:layout_width="70dp"
                            android:layout_height="70dp"
                            android:src="@drawable/google_plus" />

                    </LinearLayout>

                    <LinearLayout
                        android:layout_width="match_parent"
                        android:layout_height="wrap_content"
                        android:layout_marginTop="@dimen/dp_20"
                        android:gravity="center"
                        android:orientation="horizontal">

                        <TextView
                            android:layout_width="wrap_content"
                            android:layout_height="wrap_content"
                            android:text="@string/do_not_have_account"
                            android:textColor="@android:color/white" />

                        <TextView
                            android:layout_width="wrap_content"
                            android:layout_height="wrap_content"
                            android:text="@string/sign_up"
                            android:textColor="@color/colorBlue" />

                    </LinearLayout>

                </LinearLayout>

            </RelativeLayout>

        </RelativeLayout>

    </androidx.core.widget.NestedScrollView>


</RelativeLayout>